--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -53,6 +53,9 @@ jobs:
             out
             ~/.foundry
 
+      - name: Install Cosign
+        uses: sigstore/cosign-installer@v3
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
