--- a/.github/workflows/solidity.yml
+++ b/.github/workflows/solidity.yml
@@ -39,4 +39,4 @@ jobs:
       docker-image-name: solidity-token-erc20-crowdsale
       runs-on: solidity-token-erc20-crowdsale
       ignition-module: 'ignition/modules/Crowdsale.ts'
-      subgraph-contract-address-key: 'CrowdsaleModule#token'
+      subgraph-contract-address-key: 'CrowdsaleModule#ExampleToken'
