--- a/package.json
+++ b/package.json
@@ -1,14 +1,40 @@
 {
-  "name": "solidity-erc20-metatx",
+  "name": "@settlemint/solidity-token-erc20-crowdsale",
+  "description": "Smart contract set to build an ERC20 token sale in SettleMint",
   "version": "7.0.0",
-  "description": "Solidity ERC20 with Meta tx",
+  "private": false,
+  "license": "FSL-1.1-MIT",
+  "author": {
+    "name": "SettleMint",
+    "email": "support@settlemint.com",
+    "url": "https://settlemint.com"
+  },
+  "homepage": "https://github.com/settlemint/solidity-token-erc20-crowdsale/blob/main/README.md",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/settlemint/solidity-token-erc20-crowdsale.git"
+  },
+  "bugs": {
+    "url": "https://github.com/settlemint/solidity-token-erc20-crowdsale/issues",
+    "email": "support@settlemint.com"
+  },
   "keywords": [
     "solidity",
-    "subgraph"
+    "subgraph",
+    "blockchain-transformation",
+    "erc20",
+    "crowdsale"
   ],
-  "author": "SettleMint <hello@settlemint.com>",
-  "license": "MIT",
-  "devDependencies": {
+  "files": [
+    "/contracts",
+    "/ignition",
+    "/lib",
+    "/subgraph",
+    "/test",
+    "/out",
+    "/artifacts"
+  ],
+  "dependencies": {
     "@amxx/graphprotocol-utils": "1.1.0",
     "@graphprotocol/graph-cli": "0.80.0",
     "@graphprotocol/graph-ts": "0.35.1",
